[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/UI/PauseScreen.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.0
margin_top = -55.0
margin_right = 51.0
margin_bottom = 55.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="VBoxContainer"]
margin_right = 102.0
margin_bottom = 20.0
text = "Restart"

[node name="ChangeDeckButton" type="Button" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 102.0
margin_bottom = 50.0
text = "Change Deck"

[node name="ReplayButton" type="Button" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 102.0
margin_bottom = 80.0
text = "Save Replay"

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 102.0
margin_bottom = 110.0
text = "Back"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 102.0
margin_bottom = 140.0
text = "To Main Menu"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 102.0
margin_bottom = 170.0
text = "Exit Game"

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="onRestartPressed"]
[connection signal="pressed" from="VBoxContainer/ChangeDeckButton" to="." method="onChangeDeckPressed"]
[connection signal="pressed" from="VBoxContainer/ReplayButton" to="." method="onSaveReplayPressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="onBackPressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="onMainMenuPressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="onExitPressed"]
